--- a/index.html
+++ b/index.html
@@ -142,9 +142,15 @@
         <div id="screening" class="page hidden">
             <div class="card">
                 <h2>Skrining Kesehatan Mental Gen-Z</h2>
-                <p>Form ini dibuat buat ngecek kondisi mental kamu akhir-akhir ini biar kita tahu kamu lagi baik-baik aja atau butuh support</p>
+                <p>Form ini dibuat untuk ngecek kondisi mental kamu akhir-akhir ini biar kita tahu kamu lagi baik-baik aja atau butuh support</p>
                 <p>klik tombol dibawah 👇</p>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdzrmrkfT1EaforezbHrsCE3hwtIkl_TSzxJ--gg4SJwxponw/viewform?usp=header"><button class="btn" onclick="nextQuestion()">Masuk ke Gform</button></a>
+            </div>
+
+            <div class="card">
+            <h3>Hubungi Kami</h3>
+            <p>Klik tombol di bawah untuk mengunjungi Instagram.</p>
+            <a href="https://instagram.com" style="background-color:#E1306C; color:white; padding:10px; text-decoration:none; border-radius:5px;"> Instagram </a>
             </div>
         </div>
 
@@ -180,4 +186,5 @@
 
     </script>
 </body>
+
 </html>
