--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
                 <button class="btn" onclick="showPage('screening')">Mulai Skrining Diri</button>
                 <button class="btn" onclick="showPage('sharing')">Curhat Anonim</button>
             </div>
+
+            <div class="card">
+            <h3>Hubungi Kami</h3>
+            <p>Klik tombol di bawah untuk mengunjungi Instagram.</p>
+            <a href="https://instagram.com" style="background-color:#E1306C; color:white; padding:10px; text-decoration:none; border-radius:5px;"> Instagram </a>
+            </div>
         </div>
 
         <!-- Self Screening Page -->
@@ -188,3 +194,4 @@
 </body>
 
 </html>
+
