--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="card">
             <h3>Hubungi Kami</h3>
             <p>Klik tombol di bawah untuk mengunjungi Instagram.</p>
-            <a href="https://www.instagram.com/linguatechsynergy?igsh=Mnk4bnhpN3owd201" style="background-color:#E1306C; color:white; padding:10px; text-decoration:none; border-radius:5px;"> Instagram </a>
+            <a href="https://www.instagram.com/linguatechsynergy?igsh=bWRsam94NGNzYzEx" style="background-color:#E1306C; color:white; padding:10px; text-decoration:none; border-radius:5px;"> Instagram </a>
             </div>
         </div>
 
@@ -188,6 +188,7 @@
 </body>
 
 </html>
+
 
 
 
